main/default/objects/UW_Analysis_Template__c/UW_Analysis_Template__c.object-meta.xml
<CustomObject>
    <label>UW Analysis Template</label>
    <nameField>
        <displayFormat>UWAT-{0000}</displayFormat>
        <label>UW Analysis Template</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UW Analysis Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>