main/default/objects/UW_Analysis_Template__c/fields/Base_Rates__c.field-meta.xml
<CustomField>
    <fullName>Base_Rates__c</fullName>
    <label>Base Rates</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>