main/default/objects/UW_Analysis_Template__c/fields/Default_Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Default_Split_Percentage__c</fullName>
    <label>Default Split Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>