main/default/objects/UW_Analysis_Template__c/fields/Rating_Factor__c.field-meta.xml
<CustomField>
    <fullName>Rating_Factor__c</fullName>
    <label>Rating/Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>