main/default/objects/UW_Analysis_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UW_Analysis_Name__c</columns>
    <columns>Criteria__c</columns>
    <columns>Base_Rates__c</columns>
    <columns>Rating_Factor__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>UW_Analysis_Code__c</columns>
    <columns>Default_Split_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>